[package]
name = "ground-stop-anomalies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
chrono = "0.4"
geo = "0.18.0"
geojson = "0.22.2"
quick-csv = "0.1.6"
rayon = "1.5.1"
serde_json = "1.0.75"